--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
+    "dotenv": "^4.0.0",
     "express": "^4.15.4",
-    "mongoose": "^4.11.7"
+    "mongoose": "^4.11.7",
+    "nodemon": "^1.11.0"
   }
 }
